k8s-cluster/github/kubernetes/cluster/examples/cafe-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cafe-ingress
spec:
  tls:
  - hosts:
    - cafe.example.com
    secretName: cafe-secret
  rules:
  - host: cafe.example.com
    http:
      paths:
#      - path: /tea
#        backend:
#          serviceName: tea-svc
#          servicePort: 80
#      - path: /coffee
#        backend:
#          serviceName: coffee-svc
#          servicePort: 80
      - path: /traffic
        backend:
          serviceName: netisation-consumer-svc
          servicePort: 80
      - path: /
        backend:
          serviceName: kibana-logging
          servicePort: 80
