k8s-cluster/github/kubernetes/cluster/examples/k8s-log-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s-log-ingress
spec:
  tls:
  - hosts:
    - log.k8s.cmos.cn
    secretName: k8s-log
  rules:
  - host: log.k8s.cmos.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-logging
          servicePort: 80
